--- a/styles.css
+++ b/styles.css
@@ -178,3 +178,14 @@ button {
 	padding: 0.5em;
 	cursor: pointer;
 }
+
+.verbatim{
+	padding: 2px;
+	background-color: #333;
+	color: #f9f9f9;
+}
+.verbatimQuote{
+	padding: 3px;
+	background-color: #bbb;
+	color: #090909;
+}
